<resources>
    <string name="app_name">FirstApp</string>
    <string name="hello">Hello World</string>
    <string name="text">Hello </string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn_lable">Button</string>
    <string name="hint_txt">Input your name</string>
    <string name="lable_1">转化为华氏温度</string>
    <string name="lable_2">请输入摄氏度</string>
    <string name="lable_3">结果是：</string>
    <string name="label_add1">+1 point</string>
    <string name="label_add2">+2 point</string>
    <string name="label_add3">+3 point</string>
    <string name="btn_resert_label">Resert</string>
</resources>
